# pick_and_place_demos

./: CMakeLists.txt  package.xml
launch/: baxter_pick_place.launch  calvin_pick_n_place.launch  crustcrawler_pick_place.launch  cube_pick_place.launch  cube_pos_pub.launch  moveit_pick_place_tests.launch  pick_and_place_python.launch
launch/params/: global_params.yaml  global_params.yml  parameters.yaml  planner_params.yml
msg/: pick_place_pose.msg
params/: experiment_settings.yml  global_params.yml
src/: baxter_pick_place.cpp  calvin_pick_n_place.cpp  crustcrawler_pick_place.cpp  cube_pick_place.cpp  cube_pos_pub.cpp  get_rpy.cpp  globals.h  moveit_pick_place_tests.cpp  pick_and_place_pose.cpp  pick_and_place_python.cpp  test_class.cpp
