<?xml version="1.0"?>
<package format="2">
  <name>pick_and_place_demos</name>
  <version>0.0.0</version>
  <description>The pick_and_place_demos package</description>
  <maintainer email="ghanim@todo.todo">ghanim</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_mover_utils</build_depend>
  <build_depend>cafer_core</build_depend>
  <build_depend>crustcrawler_core_msgs</build_depend>
  <build_depend>crustcrawler_mover_utils</build_depend>
  <build_depend>pr2_mover_utils</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>rgbd_utils</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_export_depend>baxter_core_msgs</build_export_depend>
  <build_export_depend>baxter_mover_utils</build_export_depend>
  <build_export_depend>cafer_core</build_export_depend>
  <build_export_depend>crustcrawler_core_msgs</build_export_depend>
  <build_export_depend>crustcrawler_mover_utils</build_export_depend>
  <build_export_depend>pr2_mover_utils</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>rgbd_utils</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <exec_depend>baxter_core_msgs</exec_depend>
  <exec_depend>baxter_mover_utils</exec_depend>
  <exec_depend>cafer_core</exec_depend>
  <exec_depend>crustcrawler_core_msgs</exec_depend>
  <exec_depend>crustcrawler_mover_utils</exec_depend>
  <exec_depend>pr2_mover_utils</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>rgbd_utils</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
